# edge-panel

./: .gitignore  Makefile  README.md  globals.vala  meson.build
src/: apps_manager.vala  apps_menu.vala  clock_menu.vala  edge-panel.css  edge_panel.vala  globals.vala  menu_window.vala  meson.build  notifications_manager.vala  today_scope.vala  user_menu.vala  utils.vala
